"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2008-08-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-05:
	  prsim: Converted use of uchars for node values over to value_enum, 
		for clarity, and caught some suspicious code!
		Also cleaned up some uses of pull_enum, 
		eliminating confusing conversions to/from char.
		Hope compiler is smart enough to use size uchar, 
		given value range.  
	  Next: structure integrity checks, recursive diagnostics
		with PRSIM_INDIRECT_EXPRESSION_MAP=1.
		

2008-08-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-04:
	  More simple conversions of node pull-states using new fanin struct.
	  Next: work on structure integrity checks and recursive diagnostics.


2008-08-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-03:
	  Moved enumerations to "enums.h" outside of structs, cleaned-up.
	  unique_process_subgraph now has local node fanin/out summaries,
		much like Node-struct, which are populated during 
		type-pass (once per type) in ExprAlloc.
		These summaries come into play because nodes now list
		processes as fanins, since they are not needed during
		simulation, only diagnostics.   
	  State::get_pull: many short-lived expr_indicies have been
		removed, which will simplify get_pull() replacement.
		Except, recursive diagnostics (why*) were untouched, 
		need to be rewritten differently.
	  PRSIM_INDIRECT_EXPRESSION_MAP doesn't fully compile yet.


2008-08-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-02:
	  Continued restructuring of prsim structures.  
	  PRSIM_INDIRECT_EXPRESSION_MAP doesn't fully compile yet.
	  Next: replacing nodes' pull-up/dn structure with pseudo
		expression for taking OR-combinations of rules, essentially